--- a/src/main/webapp/WEB-INF/views/service/error.html
+++ b/src/main/webapp/WEB-INF/views/service/error.html
@@ -12,8 +12,7 @@
     <title>Ресторан</title>
 </head>
 <body>
-<div th:fragment="footer">
-    © 2011 The Good Thymes Virtual Grocery
-</div>
+<h1>Something went wrong! </h1>
+<h2>Our Engineers are on it</h2>
 </body>
 </html>
