--- a/src/main/resources/templates/views/user/product/list.html
+++ b/src/main/resources/templates/views/user/product/list.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring4-4.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head th:insert="/template/index.html :: header">
+<head th:insert="views/template/index.html :: header">
 </head>
 
 <script>
@@ -28,7 +28,7 @@
     </div>
 </div>
 
-<div th:insert="/template/index.html :: footer">
+<div th:insert="views/template/index.html :: footer">
 </div>
 </body>
 </html>
