--- a/src/main/resources/templates/views/template/index.html
+++ b/src/main/resources/templates/views/template/index.html
@@ -11,15 +11,15 @@
     <!--<link rel="shortcut icon" type="image/png" href="favicon.ico"/>-->
     <title>Ресторан</title>
     <!-- bower:css-->
-    <link rel="stylesheet" href="/resources/dev/bower_components/toastr/toastr.css"/>
+    <link rel="stylesheet" th:href="@{/dev/bower_components/toastr/toastr.css}"/>
     <!-- endbower-->
-    <link rel="stylesheet" type="text/css" href="/resources/dev/css/normalize.css"/>
-    <link rel="stylesheet" type="text/css" href="/resources/dev/css/main.css"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/dev/css/normalize.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/dev/css/main.css}" />
     <!-- bower:js-->
-    <script src="/resources/dev/bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="/resources/dev/bower_components/toastr/toastr.js"></script>
+    <script th:src="@{/dev/bower_components/jquery/dist/jquery.min.js}"></script>
+    <script th:src="@{/dev/bower_components/toastr/toastr.js}"></script>
     <!-- endbower-->
-    <script type="text/javascript" src="/resources/dev/js/cart.js"></script>
+    <script type="text/javascript" th:src="@{/dev/js/cart.js}"></script>
 
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
