--- a/src/main/resources/templates/views/template/index.html
+++ b/src/main/resources/templates/views/template/index.html
@@ -26,6 +26,12 @@
     <![endif]-->
 </head>
 <body>
+
+<div id="cart" th:fragment="cart">
+    В вашей корзине пусто
+</div>
+
+
 <div th:fragment="footer">
     © 2011 The Good Thymes Virtual Grocery
 </div>
