--- a/src/main/resources/templates/views/user/product/list.html
+++ b/src/main/resources/templates/views/user/product/list.html
@@ -2,33 +2,26 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head th:insert="views/template/index.html :: header">
 </head>
+<body>
+    <div th:insert="views/template/index.html :: cart">
+    </div>
 
-<script>
+    <div th:each="elem : ${products}">
+        <div class="service_product_element">
+            <p th:text="${elem.getName()}"></p>
 
-</script>
-
-
-<div th:each="elem : ${products}">
-    <div class="service_product_element">
-        <p th:text="${elem.getName()}"></p>
-        <p class="service_product_element">Добавить товар</p>
-
-        <? //=== Форма для связи товара с корзиной ?>
-        <form autocomplete="off" action="/user/product/add/" class="service_product_info_form">
-            <input type="hidden" name="id" th:value="${elem.getId()}" autocomplete="off">
-            <input type="number" min="0" class="service_quantity_text_input" name="quantity" value="0" autocomplete="off">
-        </form>
-
-        <div class="action-buy-count">
-            <div class="counterin">
-                <a href="#" class="counterin-min simple service_product_change_cart" data-method="reduce"></a>
-                <a href="#" class="counterin-plus simple service_product_change_cart" data-method="add"></a>
-            </div>
+            <? //=== Форма для связи товара с корзиной ?>
+            <form autocomplete="off" action="/user/product/add/" class="service_product_info_form">
+                <input type="hidden" name="id" th:value="${elem.getId()}" autocomplete="off">
+                <label>
+                    <span>Количество товара:</span>
+                    <input type="number" min="0" name="quantity" th:value="${cart.getProduct(elem.getId()) != null} ? ${cart.getProduct(elem.getId()).getQuantity()} : 0" class="service_quantity_text_input"   autocomplete="off">
+                </label>
+            </form>
         </div>
     </div>
-</div>
 
-<div th:insert="views/template/index.html :: footer">
-</div>
+    <div th:insert="views/template/index.html :: footer">
+    </div>
 </body>
 </html>
