--- a/src/main/resources/static/dev/css/main.css
+++ b/src/main/resources/static/dev/css/main.css
@@ -1,3 +1,12 @@
 body {
     background:#a5a5a5;
 }
+
+/*=== Cart ===*/
+#cart {
+    position:absolute;
+    top:0px;
+    right:0px;
+    padding:10px;
+    background:#f00;
+}
