--- a/src/main/resources/templates/views/template/index.html
+++ b/src/main/resources/templates/views/template/index.html
@@ -27,8 +27,7 @@
 </head>
 <body>
 
-<div id="cart" th:fragment="cart">
-    В вашей корзине пусто
+<div id="cart" th:fragment="cart" th:utext="${cart.toString()}">
 </div>
 
 
