--- a/src/main/resources/templates/views/user/product/list.html
+++ b/src/main/resources/templates/views/user/product/list.html
@@ -3,7 +3,7 @@
 <head th:insert="views/template/index.html :: header">
 </head>
 <body>
-    <div th:insert="views/template/index.html :: cart">
+    <div th:insert="views/user/cart/cart.html :: cart">
     </div>
 
     <div th:each="elem : ${products}">
