--- a/src/main/resources/templates/views/template/index.html
+++ b/src/main/resources/templates/views/template/index.html
@@ -19,6 +19,7 @@
     <script th:src="@{/dev/bower_components/jquery/dist/jquery.min.js}"></script>
     <script th:src="@{/dev/bower_components/toastr/toastr.js}"></script>
     <!-- endbower-->
+    <script type="text/javascript" th:src="@{/dev/js/toastr.js}"></script>
     <script type="text/javascript" th:src="@{/dev/js/cart.js}"></script>
 
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
